test/corpus/block_expect.txt
================================================================================
block_expect_followed_by_sibling
================================================================================
check = |sum| {
    expect sum == 15
    sum
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (expr_body
          (body_expression
            (expect
              (expr_body
                (bin_op_expr
                  (variable_expr
                    (identifier))
                  (operator)
                  (const
                    (int)))))
            (variable_expr
              (identifier))))))))

================================================================================
block_multiple_and_nested_expects
================================================================================
check = |sum| {
    expect sum == 15
    expect sum > 0
    nested = { expect sum != 0 sum }
    nested
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (expr_body
          (body_expression
            (expect
              (expr_body
                (bin_op_expr
                  (variable_expr
                    (identifier))
                  (operator)
                  (const
                    (int)))))
            (expect
              (expr_body
                (bin_op_expr
                  (variable_expr
                    (identifier))
                  (operator)
                  (const
                    (int)))))
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              (expr_body
                (body_expression
                  (expect
                    (expr_body
                      (bin_op_expr
                        (variable_expr
                          (identifier))
                        (operator)
                        (const
                          (int)))))
                  (variable_expr
                    (identifier)))))
            (variable_expr
              (identifier))))))))

================================================================================
block_expect_adjacent_to_declaration
================================================================================
check = |sum| {
    expect sum == 15
    result = sum
    result
}
expect 1 == 1
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (expr_body
          (body_expression
            (expect
              (expr_body
                (bin_op_expr
                  (variable_expr
                    (identifier))
                  (operator)
                  (const
                    (int)))))
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              (expr_body
                (variable_expr
                  (identifier))))
            (variable_expr
              (identifier)))))))
  (expect
    (expr_body
      (bin_op_expr
        (const
          (int))
        (operator)
        (const
          (int))))))

================================================================================
block_identifier_with_expect_prefix
================================================================================
check = |sum| {
    expected = sum
    expected
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (expr_body
          (body_expression
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              (expr_body
                (variable_expr
                  (identifier))))
            (variable_expr
              (identifier))))))))

================================================================================
block_expect_condition_on_next_line
================================================================================
check = |sum| {
    expect
        sum == 15
    sum
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (expr_body
          (body_expression
            (expect
              (expr_body
                (bin_op_expr
                  (variable_expr
                    (identifier))
                  (operator)
                  (const
                    (int)))))
            (variable_expr
              (identifier))))))))

================================================================================
block_expect_condition_continues_with_pipe
================================================================================
check = |sum| {
    expect sum
        |> is_valid
    sum
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (expr_body
          (body_expression
            (expect
              (expr_body
                (bin_op_expr
                  (variable_expr
                    (identifier))
                  (operator)
                  (variable_expr
                    (identifier)))))
            (variable_expr
              (identifier))))))))
